# acsummary

./: .gitignore  README.md  hello.py  pyproject.toml
src/acsummary/: ai_processor.py  cli.py  content_processor.py  csv_writer.py  main.py  models.py  rate_limiter.py  scraper.py
src/acsummary/tests/: test_ai_processor.py  test_scraper.py
