[project]
name = "advent-calendar-summary"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "asyncio>=3.4.3",
    "beautifulsoup4>=4.12.3",
    "click>=8.1.8",
    "httpx>=0.28.1",
    "litellm>=1.53.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/acsummary"]

[project.scripts]
acsummary = "acsummary.cli:cli"
